Edited wiki page XmlMonitoring through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2197 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/XmlMonitoring.wiki
+++ b/wiki/XmlMonitoring.wiki
@@ -60,8 +60,8 @@ All options not otherwise specified are point-time outputs.
 || nets owned || Number of nets currently owned by the population ||
 || mean hole index || Average hole-index of all nets (will be not-a-number when no nets are owned) ||
 || mean insecticide content || Average insecticide content of all nets in mg/m² (will be not-a-number when no nets are owned) ||
-|| IRS insecticide content || Average insecticide content of hut walls over all huts (new IRS model only); added in schema 30 ||
-|| IRS effects || Average effect of IRS on the following three factors: availablity to mosquitoes, preprandial killing, postprandial killing; mean across all humans; both IRS models; added in schema 30 ||
+|| IRS insecticide content || Average insecticide content of hut walls over all huts ([ModelIntervVector#Newer_model new IRS model] only); added in schema 30 ||
+|| IRS effects || Average effect of IRS on the following three factors: availablity to mosquitoes, preprandial killing, postprandial killing; mean across all humans; both [ModelIntervVector#Indoor_Residual_Spraying IRS models]; added in schema 30 ||
 
 == Survey measures ==
 
