--- a/wiki/References.wiki
+++ b/wiki/References.wiki
@@ -29,6 +29,8 @@ Vaccine into the Expanded Program on Immunization in Sub-Saharan
 Africa: Analysis of Uncertainties Using a Stochastic Individual-Based
 Simulation Model of Plasmodium falciparum Malaria]
 
+[http://www.ncbi.nlm.nih.gov/pubmed/22272189 Ensemble modeling of the likely public health impact of a pre-erythrocytic malaria vaccine]
+
 = Offline Documentation =
 
 In case you wish to have access to the documentation on this wiki without an internet connection, you can download and extract the following:
