--- a/wiki/References.wiki
+++ b/wiki/References.wiki
@@ -29,7 +29,7 @@ Vaccine into the Expanded Program on Immunization in Sub-Saharan
 Africa: Analysis of Uncertainties Using a Stochastic Individual-Based
 Simulation Model of Plasmodium falciparum Malaria]
 
-[http://www.ncbi.nlm.nih.gov/pubmed/22272189 Ensemble modeling of the likely public health impact of a pre-erythrocytic malaria vaccine]
+[http://www.plosmedicine.org/article/info%3Adoi%2F10.1371%2Fjournal.pmed.1001157 Ensemble modeling of the likely public health impact of a pre-erythrocytic malaria vaccine]
 
 = Offline Documentation =
 
