Edited wiki page Changelog through web user interface.
git-svn-id: https://openmalaria.googlecode.com/svn@2211 aa1ca794-fd11-11dd-ac65-f74f249cfaac

--- a/wiki/Changelog.wiki
+++ b/wiki/Changelog.wiki
@@ -23,6 +23,7 @@ To be released soon. Current changes:
   * New IRS model & parameterisation (to be documented)
   * Old IRS model can also have a preprandial effect
   * Heterogeneity of decay in the ITN model has been made per-human rather than per net (mistake in previous release)
+  * New continuous output options
 
 
 == Schema Version 29 ==
