--- a/wiki/XmlScenario.wiki
+++ b/wiki/XmlScenario.wiki
@@ -115,7 +115,7 @@ The `ModelOptions` sub-element is a list of binary options, in the same format a
 
 === `clinical` ===
 
-The `clinical` element currently simply has a `healthSystemMemory` attribute: if, when a sickness bout occurs, the previous episode was less than this many time-steps ago, the new bout is considered a second case (second-line treatment may be used and the two bouts will likely be reported as a single episode).
+The `clinical` element currently simply has a `healthSystemMemory` attribute: if, when a sickness bout occurs, the previous episode was less than this many time-steps ago, the new bout is considered a second case (second-line treatment may be used and the two bouts will likely be reported as a single episode). The `healthSystemMemory` is defined in time steps. In the 5 day model, a value of 6 corresponds to 30 days.
 
 (The main health-system description is [XmlScenario#Health_system above].)
 
